--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,14 @@ cache:
     - .cache/pip
     - venv/
 
-#variables:
-#  DOCKER_DRIVER: overlay2
-#  DOCKER_TLS_CERTDIR: ""
-  #IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+variables:
+  IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
 
 build:
   stage: build
+  image: docker:latest
+  services:
+    - docker:dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker build -t $IMAGE_TAG app
@@ -21,7 +22,11 @@ build:
 
 deploy:
   stage: deploy
+  image: docker:latest
+  services:
+    - docker:dind
   script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker pull $IMAGE_TAG
     - docker-compose down
     - docker-compose up -d
